--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -197,7 +197,7 @@ body a {
 
 ul.header_right_box {
     padding: 0;
-    margin: 0 0 0 33%;
+    margin: 0 0 0 23%;
     list-style: none;
 
 }
@@ -231,6 +231,7 @@ i.edit {
 }
 
 ul.header_right_box li.last {
+    float:right;
     margin-right: 0;
 }
 
