update compare function return json

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -507,6 +507,29 @@ ul.callbacks_tabs.callbacks1_tabs {
 
 }
 
+.button-follow {
+    display: block;
+    z-index: 2;
+    text-shadow: none;
+    margin: 0;
+    max-width: none;
+}
+
+.button-follow a {
+    text-decoration: none;
+    color: #fff;
+    background: #d8232a;
+    padding: 8px 20px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
 .button a {
     text-decoration: none;
     color: #fff;
